# mode-mamba-ts

./: .editorconfig  .gitignore  README.md  environment.yml  pyproject.toml
configs/: common.py  custom_BiMamba4TS.py  custom_Crossformer.py  custom_MODE.py  custom_Mamba.py  custom_iTransformer.py  model_parser_dict.py
output/case_study/: case_study.ipynb
output/efficiency_exp/: efficiency_plot.ipynb
output/lookback/: lookback_analysis.ipynb
output/robustness/: robustness.ipynb
scripts/: convert_results_to_csv.py  run-para.sh  run.py
scripts/Reorder_ECL/: S_Mamba_behind.sh  S_Mamba_middle.sh
scripts/ablation/: run-ablation.sh
scripts/ablation/ECL/: ECL_attention_ffn.sh  ECL_baseline.sh  ECL_linear.sh  ECL_no_hippo.sh  (+6 more)
scripts/case_study/: MODE.sh  PatchTST.sh  S-Mamba.sh  iTransformer.sh  run_case_study.sh
scripts/efficiency/: Exp1_PEMS08.sh  Exp2_ECL.sh  Exp3_Weather.sh  Exp4_ETTm1.sh  parse_efficiency_metrics.py  run_efficiency_exp.sh
scripts/increasing_lookback/: run-lookback.sh
scripts/robustness/: ECL.sh  ETTm1.sh  Weather.sh  run-robustness.sh
src/data_provider/: data_factory.py  data_loader.py
src/experiments/: exp_basic.py  exp_long_term_forecasting.py  exp_long_term_forecasting_partial.py
src/layers/: Attention.py  Crossformer_layer.py  Transformer_EncDec_M.py
src/model/: Autoformer_M.py  Crossformer.py  DLinear.py  Flashformer_M.py  Flowformer_M.py  Informer_M.py  Mode.py  Reformer_M.py  S_Mamba.py  Transformer_M.py  __init__.py  iFlashformer.py  iFlowformer.py  iInformer.py  iReformer.py
src/utils/: tools_bimamba.py
(+124 files in other folders)
